--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 
 <header>
-  <div class="logo">Mixtas</div>
+  <div class="logo">Mixtas Store</div>
   <nav>
     <a href="index.html">Home</a>
     <a href="products.html">Shop</a>
