--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <section class="hero">
   <div>
-    <h1>Jackets for the Modern Man</h1>
+    <h1 class="titleFirstPage">Jackets for the Modern Man</h1>
     <a href="products.html" class="btn">Discover Now</a>
   </div>
 </section>
