--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <section class="hero">
   <div>
     <h1 class="titleFirstPage">Jackets for the Modern Man</h1>
-    <a href="products.html" class="btn">Discover Now</a>
+    <a href="products.html" class="btn">Discover Our Products Now</a>
   </div>
 </section>
 
