Product title update

--- a/products.html
+++ b/products.html
@@ -14,6 +14,13 @@
   </nav>
 </header>
 
+ <div>
+    <h1 class="productsTitle">Clothes for the Modern Man</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus dapibus venenatis lacus. Nunc facilisis, sapien non dictum vehicula, leo nisl commodo magna, in condimentum elit ligula non tellus. 
+    </p>
+    
+  </div>
+
 <div class="shop-layout">
   <aside class="filters">
     <h3>Filters</h3>
