--- a/products.html
+++ b/products.html
@@ -14,7 +14,7 @@
   </nav>
 </header>
 
- <div>
+ <div class="divTitle">
     <h1 class="productsTitle">Clothes for the Modern Man</h1>
     <p class="productsText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br>Phasellus dapibus venenatis lacus. Nunc facilisis, sapien non dictum vehicula, leo nisl commodo magna, in condimentum elit ligula non tellus. 
     </p>
